--- a/Operators/3.Relational Operators.md
+++ b/Operators/3.Relational Operators.md
@@ -1,6 +1,6 @@
 **3) Relational Operators:**
 - The purpose of relational operators is that "To compare Two or More values".
-- IF two or more objects / variables connected with relational operators then it is called **"Relational Expression / Conditions".**
+- If two or more objects / variables connected with relational operators then it is called **"Relational Expression / Conditions".**
 - The result of Relational Expression is either **True** or **False**.
 - The Following table gives list of relational operators.
 
