--- a/Flow Control/1.conditional statements.md
+++ b/Flow Control/1.conditional statements.md
@@ -12,14 +12,12 @@
     statement-1
     statement-2
     statement-n
-Other statements in program
-
-Note:Here : is called "Indentation Symbol" and statement-1, statement-2...statement-n are called 
-"Indentation Block of Statements"</pre>
+Other statements in program</pre>
+- Note:Here : is called "Indentation Symbol" and statement-1, statement-2...statement-n are called "Indentation Block of Statements".
 
 - _Explanation:_ 
-<pre>- If the test condition result is True then PVM executes block of statements and also other statements in program.
-- If the test condition is False then PVm executes other statements in program only.</pre>
+1. If the test condition result is True then PVM executes block of statements and also other statements in program.
+2. If the test condition is False then PVm executes other statements in program only.
 
 **2. if...else Statement:**
 - _Syntax:_
@@ -32,16 +30,13 @@ else:
    statement-11
    statement-12
    statement-nn
-Other Statements in program
-
-Note: Here statement-1, statement-2...statement-n are called as "Block of Statements-I and statement-11, statement-12...statement-nn
-are called "Block of Statements-II</pre>
+Other Statements in program</pre>
+- Note: Here statement-1, statement-2...statement-n are called as "Block of Statements-I and statement-11, statement-12...statement-nn
+are called "Block of Statements-II
 
 - _Explanation:_
-<pre>- If test condition is True then PVM executes block of statements-I ad also executes other statements in program
-  (without executing block of statements-II).
-- If the test condition is False then PVM executes block of statements-II and also executes other statements in program
-  (without executing block of statements-I).</pre>
+1. If test condition is True then PVM executes block of statements-I ad also executes other statements in program (without executing block of statements-II).
+2. If the test condition is False then PVM executes block of statements-II and also executes other statements in program (without executing block of statements-I).
 
 **3. if...elif...else Statement:**
 - _Syntax:_ 
@@ -60,12 +55,10 @@ else:
     else Block of Statements.
 Other Statements in Program</pre>
 - _Explanation:_
-<pre>- If test condition-1 is True then PVM executes Block of Statements-I and other statements in program.
-- If the test condition-1 is False and if test conditino-2 is True then PVM executes Block of Statements-II and 
-  other statements in program.
-- This process repeated until all test conditions evaluated and 
-  when all the test condition are False then PVM executes else Block of Statements and Other statements in program.
-- Writing else block is optional.</pre>
+1. If test condition-1 is True then PVM executes Block of Statements-I and other statements in program.
+2. If the test condition-1 is False and if test conditino-2 is True then PVM executes Block of Statements-II and other statements in program.
+3. This process repeated until all test conditions evaluated and when all the test condition are False then PVM executes else Block of Statements and Other statements in program.
+4. Writing else block is optional.</pre>
 
 **4. match...case Statement:**
 - It is one of new feature in Python 3.10
@@ -86,7 +79,7 @@ match expression:
 Other Statements in program.</pre>
 
 - _Explanation:_ 
-<pre>1. Here 'match' and 'case' are the keywords.
+1. Here 'match' and 'case' are the keywords.
 2. 'expression' is any data type value except float.
 3. The value of expression comparing with case label-1.
    If it is True then PVM execute Block of Statement-I and also executes
@@ -98,4 +91,4 @@ Other Statements in program.</pre>
    PVM executes corresponding Block of Statements and also executes Other Statements.
 5. If Value of expression is not matching with any case labels then PVM executes 
    Block of Statements written under default case block and also executes Other statements.
-6. Writing default case block is optional.</pre>
+6. Writing default case block is optional.
